# Monophonic-Midi

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake_ctest.yml
Source/: PluginProcessor.cpp  PluginProcessor.h
Tests/: CMakeLists.txt  PluginBasics.cpp
